added tooltips + updated readme's

--- a/index.html
+++ b/index.html
@@ -16,27 +16,27 @@
 <body>
     <nav id="my-nav" class="nav nav-bar">
         <div class="nav-left">
-            <a href="https://linkedin.com/in/medijkman" class="nav-item">
+            <a href="https://linkedin.com/in/medijkman" title="LinkedIn" class="nav-item">
                 <span class="icon">
                     <i class="fab fa-linkedin"></i>
                 </span>
             </a>
-            <a href="https://github.com/MarleenEliza" class="nav-item">
+            <a href="https://github.com/MarleenEliza" title="Github" class="nav-item">
                 <span class="icon">
                     <i class="fab fa-github"></i>
                 </span>
             </a>
-            <a href="https://www.wantedly.com/users/144786278" class="nav-item">
+            <a href="https://www.wantedly.com/users/144786278" title="Wantedly" class="nav-item">
                 <span class="icon">
                     <i class="fas fa-won-sign"></i>
                 </span>
             </a>
-            <a href="https://www.hackerrank.com/marleeneliz4" class="nav-item">
+            <a href="https://www.hackerrank.com/marleeneliz4" title="HackerRank" class="nav-item">
                 <span class="icon">
                     <i class="fab fa-hackerrank"></i>
                 </span>
             </a>
-            <a href="https://exercism.io/profiles/MarleenEliza" class="nav-item">
+            <a href="https://exercism.io/profiles/MarleenEliza" title="Exercism" class="nav-item">
                 <span class="icon">
                     <i class="fas fa-code"></i>
                 </span>
