changed html for kokumin

--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
                         <a href="https://github.com/MarleenEliza/memo-app-vue/tree/main/memo_app" class="btn btn-light">See Code</a>
                     </div>
                 </div>
-                <!-- <div class="card" id="population">
+                <div class="card" id="population">
                     <img class="card-img-top" src="assets/images/kokumin.jpg" alt="Card image cap">
                     <div class="card-body">
                         <h5 class="card-title">都道府県別日本の人口</h5>
@@ -110,7 +110,7 @@
                         <a href="projects/kokumin/index.html" class="btn btn-light">Try</a>
                         <a href="#" class="btn btn-light">See Code</a>
                     </div>
-                </div> -->
+                </div>
                 <div class="card" id="price-plan">
                     <img class="card-img-top" src="assets/images/price-mock.jpg" alt="Card image cap">
                     <div class="card-body">
