changed html for kokumin

--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
                         <p class="card-text">HTML、CSS、Javascriptを利用し都道府県・性別に分けた日本国民のデータを一覧にした。JSで人数によるバーの大きさが指定されている。
                         </p>
                         <a href="projects/kokumin/index.html" class="btn btn-light">Try</a>
-                        <a href="#" class="btn btn-light">See Code</a>
+                        <a href="https://github.com/MarleenEliza/MarleenEliza.github.io/tree/master/projects/kokumin" class="btn btn-light">See Code</a>
                     </div>
                 </div>
                 <div class="card" id="price-plan">
