--- a/index.html
+++ b/index.html
@@ -120,11 +120,18 @@
                         <a href="https://github.com/MarleenEliza/PracticePricingExercise" class="btn btn-light">See Code</a>
                     </div>
                 </div>
-                <div class="card" id="price-plan">
+                <div class="card" id="avatar">
                     <img class="card-img-top" src="assets/images/avatar.jpg" alt="Card image cap">
                     <div class="card-body">
                         <h5 class="card-title">Avatar</h5>
                         <p class="card-text">自分自身の写真をFlat　Avatar化</p>
+                    </div>
+                </div>
+                <div class="card" id="desk">
+                    <img class="card-img-top" src="assets/images/desk.jpg" alt="Card image cap">
+                    <div class="card-body">
+                        <h5 class="card-title">Flat-art desk</h5>
+                        <p class="card-text">自分自身のデスクをFlatアート化に</p>
                     </div>
                 </div>
             </div>
