--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
         </div>
         <div class="container">
             <p class="intro">
-                はじめまして！オランダ出身の日本滞在の初級Front-End開発者です。経験はまだ少ないですが、コーディングが好きでIT業界に入社しました。これからもっとコーディングを勉強し、人を感動させる・喜ばせるアプリケーションを作れるようになることを目指しております。
+                はじめまして！オランダ出身の日本滞在の初級Front-End開発者です。経験はまだ少ないですが、コーディングが好きで、人のためになるクリエイティブなアプリケーションを作りたい！という気持ちが強くあります。
             </p>
         </div>
         <div id="specifications" class="wrapper container">
