fixed spelling mistake, added bold titles

--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
                     <img class="card-img-top" src="assets/images/price-mock.jpg" alt="Card image cap">
                     <div class="card-body">
                         <h5 class="card-title">Pricing Plan</h5>
-                        <p class="card-text">HTMとCSSを利用し簡単なモダンなCardレイアウト。完全にResponsiveとなっている。</p>
+                        <p class="card-text">HTMLとCSSを利用し簡単なモダンなCardレイアウト。完全にResponsiveとなっている。</p>
                         <a href="projects/price-plan/index.html" class="btn btn-light">Try</a>
                         <a href="https://github.com/MarleenEliza/PracticePricingExercise" class="btn btn-light">See Code</a>
                     </div>
