update with examples

--- a/index.html
+++ b/index.html
@@ -30,20 +30,10 @@
                     <i class="fas fa-won-sign"></i>
                 </span>
             </a>
-            <a href="https://www.hackerrank.com/marleeneliz4" title="HackerRank" class="nav-item">
-                <span class="icon">
-                    <i class="fab fa-hackerrank"></i>
-                </span>
-            </a>
-            <a href="https://exercism.io/profiles/MarleenEliza" title="Exercism" class="nav-item">
-                <span class="icon">
-                    <i class="fas fa-code"></i>
-                </span>
-            </a>
-            
         </div>
         <div class="nav-right nav-menu">
             <a class="nav-item" href="#about">About</a>
+            <a class="nav-item" href="#projects">Personal Projects</a>
             <a class="nav-item" href="#works">Works</a>
             <a class="nav-item" href="#contact-me">Contact</a>
         </div>
@@ -61,14 +51,14 @@
             </div>
             <div class="container has-text-centered">
                 <p class="intro">
-                    Dutch Front-end Engineer based in Tokyo
+                    Front-end Engineer based in Tokyo
                 </p>
             </div>
             <div id="specifications" class="wrapper container">
                 <div class="spef skills">
                     <h3>Skills</h3>
                     <strong>Coding</strong>
-                    <p>JavaScript, Typescript, VueJS</p>
+                    <p>Typescript, VueJS, React, Next, SCSS</p>
                     <strong>Languages</strong>
                     <p>Japanese, English, Dutch</p>
                     <strong>Soft skills</strong>
@@ -86,12 +76,44 @@
             </div>
         </section>
 
+        <section id="projects" class="section">
+            <div class="container">
+                <div class="has-text-centered">
+                    <h3 class="title is-3">Personal Mock Projects</h3>
+                </div>
+                <div class="card">
+                    <img class="card-img-top" src="assets/images/mail-mock.png" alt="Vue mail app preview">
+                    <div class="card-body">
+                        <h5 class="card-title">Mail App</h5>
+                        <p class="card-text">Vue3 Typescript Mail app with responsive design</p>
+                        <a href="https://melodic-druid-6a02a9.netlify.app/" class="btn btn-light">Try</a>
+                        <a href="https://github.com/MarleenEliza/vue-mail-app" class="btn btn-light">See Code</a>
+                    </div>
+                </div>
+        </section>
         <section id="works" class="section">
             <div class="container">
                 <div class="has-text-centered">
                     <h3 class="title is-3">Works</h3>
                 </div>
-                <h3>Coming soon</h3>
+                <div class="container">
+                    <h3>Examples of projects I have worked on</h3>
+                    <ul class="list">
+                        <li>Website for art gallery with many animations and interaction. For a rather complicated
+                            animation with SVG morphing, I used <a href="http://snapsvg.io/">SnapSVG</a></li>
+                        <li>Internal portal wesbite for large Japanese company within SharePoint using <a
+                                href="https://learn.microsoft.com/en-us/sharepoint/dev/spfx/web-parts/overview-client-side-web-parts">
+                                Sharepoint web-parts
+                            </a></li>
+                        <li> Databank for bio science researchers with complicated sorting function (AND, AND/OR sorting
+                            and sort groups could be freely set by the users)</li>
+                        <li> And more...</li>
+
+                    </ul>
+
+                    <small>*To protect my former clients privacy, I am sadly not able to directly share the links on
+                        this portfolio. Please inquire if you would like to know more. </small>
+                </div>
             </div>
         </section>
     </main>
